Frontend: Fixed layout shift issue using Font in layout.js only

--- a/tecalley-frontend/app/globals.css
+++ b/tecalley-frontend/app/globals.css
@@ -3,17 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-
   color: rgba(0, 0, 0, 1);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
 * {
